# snowdrift-ci

./: .gitignore  .lvimrc  TESTING.md  bake-gitlab.cabal  bake-snowdrift.cabal  snowdrift-ci.cabal
data/: merge_request.json  merge_request_closed.json  snowdrift-nix.commands  snowdrift.commands  snowdrift.json  snowdrift_ci_test.json
src/: Bake.hs  Main.hs
src/Bake/: Parser.hs  Type.hs
src/Snowdrift/: CI.hs
src/Snowdrift/CI/: Core.hs  Git.hs  Parser.hs  Printer.hs  Process.hs  Stack.hs  Type.hs
src/Snowdrift/CI/Type/: Internal.hs
tests/: Test.hs
tests/Test/: Parser.hs  Server.hs
