name:                bake-gitlab
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Nikita Karetnikov
maintainer:          nikita@karetnikov.org
category:            Web
build-type:          Simple
cabal-version:       >=1.10
data-files:          merge_request_opened.json
                     merge_request_closed.json
data-dir:            data


library
  build-depends:       base >=4.8 && <4.9
                     , aeson
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -O2
  exposed-modules:     Bake
                     , Bake.Type
                     , Bake.Parser

executable bake-gitlab
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
                     , aeson
                     , scotty
                     , text
                     , transformers
                     , warp
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -O2

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  hs-source-dirs:      tests
  ghc-options:         -Wall -Werror -O2
  other-modules:       Test.Parser
                     , Test.Server
  build-depends:       base
                     , bake-gitlab
                     , aeson
                     , bytestring
                     , HTTP
                     , process
                     , tasty
                     , tasty-hunit
