name:                snowdrift-ci
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Nikita Karetnikov
maintainer:          nikita@karetnikov.org
category:            Web
build-type:          Simple
cabal-version:       >=1.10
data-files:          merge_request_opened.json
                     merge_request_closed.json
                     snowdrift_ci_test.json
data-dir:            data


library
  build-depends:       base >=4.8 && <4.9
                     , aeson
                     , directory
                     , process
                     , temporary
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -O2
  exposed-modules:     Snowdrift.CI
                     , Snowdrift.CI.Core
                     , Snowdrift.CI.Git
                     , Snowdrift.CI.Parser
                     , Snowdrift.CI.Printer
                     , Snowdrift.CI.Process
                     , Snowdrift.CI.Stack
                     , Snowdrift.CI.Type
                     , Snowdrift.CI.Type.Internal

executable snowdrift-ci
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
                     , aeson
                     , bytestring
                     , directory
                     , scotty
                     , lens
                     , process
                     , temporary
                     , text
                     , transformers
                     , warp
                     , wreq
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -O2

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  hs-source-dirs:      tests
  ghc-options:         -Wall -Werror -O2
  other-modules:       Test.Parser
                     , Test.Server
  build-depends:       base
                     , snowdrift-ci
                     , aeson
                     , bytestring
                     , lens
                     , process
                     , scotty
                     , tasty
                     , tasty-hunit
                     , text
                     , transformers
                     , warp
                     , wreq
